--- a/dinodex.html
+++ b/dinodex.html
@@ -1,10 +1,11 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>dinodex</title>
 </head>
 
 <body>
   <div class="page-wrap">
-    <h1>Welcome to DinoDex&#8482;!</h1>
+    <h1>DinoDex&#8482;!</h1>
     <!-- from http://codepen.io/danielnet/pen/rikFo -->
     <div class="keypad">
       <span class="1">1</span>
