--- a/dinodex.html
+++ b/dinodex.html
@@ -4,28 +4,142 @@
 </head>
 
 <body>
+  <!-- {{> hello}} -->
+</body>
+
+<template name="keypad">
+  <div class="nav-bar-div">
+    <p>AEPi AK Booth 2015</p>
+  </div>
   <div class="page-wrap">
     <h1>DinoDex&#8482;!</h1>
     <!-- from http://codepen.io/danielnet/pen/rikFo -->
     <div class="keypad">
-      <span class="1">1</span>
-      <span class="2">2</span>
-      <span class="3">3</span>
+      <button id="1" class="1">1</button>
+      <button id="2" class="2">2</button>
+      <button id="3" class="3">3</button>
       <br>
-      <span class="4">4</span>
-      <span class="5">5</span>
-      <span class="6">6</span>
+      <button id="4" class="4">4</button>
+      <button id="5" class="5">5</button>
+      <button id="6" class="6">6</button>
       <br>
-      <span class="7">7</span>
-      <span class="8">8</span>
-      <span class="9">9</span>
+      <button id="7" class="7">7</button>
+      <button id="8" class="8">8</button>
+      <button id="9" class="9">9</button>
+      <br>
+      <button id="0" class="0">0</button>
     </div>
     <br>
-  </div>
-  <!-- {{> hello}} -->
-</body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  </div>
 </template>
+
+<template name="dino1">
+  <div class="back-button-div">
+  <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 1 </h1>
+    <iframe src="//giphy.com/embed/ZrCUYZjwrfeCs?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>A raptor on a bike.</p>
+  </div>
+ </template>
+
+ <template name="dino2">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 2 </h1>
+    <iframe src="//giphy.com/embed/mTrUbEjM1Agta?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Mittman.</p>
+  </div>
+ </template>
+
+ <template name="dino3">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 3 </h1>
+    <iframe src="//giphy.com/embed/zukJShPCxs7pC?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p> Isaac lookin' pretty </p>
+  </div>
+ </template>
+
+ <template name="dino4">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 4 </h1>
+    <iframe src="//giphy.com/embed/9Yl2liu9cEzzq?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p> Is that Bill Nye? </p>
+  </div>
+ </template>
+
+ <template name="dino5">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 5 </h1>
+    <iframe src="//giphy.com/embed/M0C1fB1aeTuww?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Sup baby gurl.</p>
+  </div>
+ </template>
+
+ <template name="dino6">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 6 </h1>
+    <iframe src="//giphy.com/embed/C3kuUBZHNYOje?html5=true" width="240" height="280" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p> I'm a little bitch! </p>
+  </div>
+ </template>
+
+ <template name="dino7">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 7 </h1>
+    <iframe src="//giphy.com/embed/BxcF1kfvVbM8U?html5=true" width="240" height="280" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p> Classy Mittman </p>
+  </div>
+ </template>
+
+ <template name="dino8">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 8 </h1>
+    <iframe src="//giphy.com/embed/aUG4GUDdxMit2?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p> Fuck yo car! </p>
+  </div>
+ </template>
+
+ <template name="dino9">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 9 </h1>
+    <iframe src="//giphy.com/embed/9b2bBsgIOPrzi?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>You knew the cat was coming. This is the Internet.</p>
+  </div>
+ </template>
+
+ <template name="dino0">
+  <div class="back-button-div">
+    <button id="back" class="back-button">back</button>
+  </div>
+  <div class="page-wrap">
+    <h1> Dino 0 </h1>
+    <iframe src="//giphy.com/embed/9b2bBsgIOPrzi?html5=true" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>You knew the cat was coming. This is the Internet.</p>
+  </div>
+ </template>
