dinos are a bit nicer

--- a/dinodex.html
+++ b/dinodex.html
@@ -39,9 +39,10 @@
   <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Triceratops (Triceratops Horridus)</h1>
+    <h1>Triceratops</h1>
+    <h4><em>Triceratops Horridus</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/LA-Triceratops_mount-2.jpg/250px-LA-Triceratops_mount-2.jpg" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p>Triceratops (from tri - “three” and keras - “horns”  and ops - “face”) was a dinosaur that had three horns on its face. Hailing from the late Cretaceous period, Triceratops was a slow-moving herbivore. Its enormous skull was one third the length of its body, consisting of a large horned frill that paleontologists believe was used for both fighting and mating rituals. It was around the size of a bus, with a brain the size of a brazil nut.</p>
+    <p>Triceratops (from <em>tri</em> - “three” and <em>keras</em> - “horns”  and <em>ops</em> - “face”) was a dinosaur that had three horns on its face. Hailing from the late Cretaceous period, Triceratops was a slow-moving herbivore. Its enormous skull was one third the length of its body, consisting of a large horned frill that paleontologists believe was used for both fighting and mating rituals. It was around the size of a bus, with a brain the size of a brazil nut.</p>
   </div>
  </template>
 
@@ -50,9 +51,10 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Stegosaurus (Stegosaurus Armatus)</h1>
+    <h1>Stegosaurus</h1>
+    <h4><em>Stegosaurus Armatus</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Stegosaurus_Sarah_in_the_Natural_History_Museum.jpg/220px-Stegosaurus_Sarah_in_the_Natural_History_Museum.jpg" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p>Stegosaurus (from stego - “roofed” and saurus - “lizard”) was a quadrupedal herbivore from the late Jurassic period. It is hypothesized to be one of the dumbest dinosaurs, with a brain the size of a walnut. It was approximately the size of a bus. Stegosaurus is most well known for the plates lining its back, its spiked tail, and its academy award-nominated performance in Disney’s Fantasia where it faced off against an anachronistic T. Rex.
+    <p>Stegosaurus (from <em>stego</em> - “roofed” and <em>saurus</em> - “lizard”) was a quadrupedal herbivore from the late Jurassic period. It is hypothesized to be one of the dumbest dinosaurs, with a brain the size of a walnut. It was approximately the size of a bus. Stegosaurus is most well known for the plates lining its back, its spiked tail, and its academy award-nominated performance in Disney’s Fantasia where it faced off against an anachronistic T. Rex.
 </p>
   </div>
  </template>
@@ -62,13 +64,18 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Apatosaurus (Apatosaurus Ajax)</h1>
+    <h1>Apatosaurus</h1>
+    <h4><em>Apatosaurus Ajax</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Louisae.jpg/250px-Louisae.jpg" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p> Apatosaurus (from apate - “deceptive” and saurus - “lizard”) was a massive herbivorous sauropod that lived in the late Jurassic period. Known as perhaps the heaviest species of dinosaur, Apatosaurus may have weighed up to 16.4 metric tons. It has never been seen in the same room at the same time as the Brontosaurus. Famous Apatosauruses include Dino from The Flintstones and Littlefoot from the fourteen* The Land Before Time movies (wait, there are fourteen of those movies?**) Apatosaurus was roughly the size of two large buses, with a brain the size of a peanut M&M (yellow variety).
-
-*As of 2016 (which is, notably, not before time)
-**Yes
- </p>
+    <p>
+      Apatosaurus (from <em>apate</em> - “deceptive” and <em>saurus</em> - “lizard”) was a massive herbivorous sauropod that lived in the late Jurassic period. Known as perhaps the heaviest species of dinosaur, Apatosaurus may have weighed up to 16.4 metric tons. It has never been seen in the same room at the same time as the Brontosaurus. Famous Apatosauruses include Dino from The Flintstones and Littlefoot from the fourteen* <em>The Land Before Time</em> movies (wait, there are fourteen of those movies?**) Apatosaurus was roughly the size of two large buses, with a brain the size of a peanut M&M (yellow variety).
+    </p>
+    <p>
+      *As of 2016 (which is, notably, not before time)
+    </p>
+    <p>
+      **Yes
+    </p>
   </div>
  </template>
 
@@ -77,7 +84,8 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Archaeopteryx (Archaeopteryx Lithographica)</h1>
+    <h1>Archaeopteryx</h1>
+    <h4><em>Archaeopteryx Lithographica</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Archaeopteryx_lithographica_%28Berlin_specimen%29.jpg/220px-Archaeopteryx_lithographica_%28Berlin_specimen%29.jpg" width="30%" height="30%" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
     <p>Archaeopteryx (meaning “original bird”) was a dinosaur from the fashionably late Jurassic period that is often cited as the evolutionary link between dinosaurs and birds. As the first bird, Archaeopteryx pioneered such concepts as the Bernoulli principle (often falsely credited to that featherless fraud Daniel Bernoulli) and the frequent-fliers program. Founder of the field of archeology (named for itself), Archaeopteryx is the first known species to discover itself, prompting a long line of existential philosophers (see Philosoraptor below). Archaeopteryx was roughly not the size of a bus, and did not like being called “bird-brain” (in fact, Archaeopteryx’s brain is thought to have been as large as an archaeopteryx brain-sized walnut).</p>
   </div>
@@ -88,9 +96,10 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Gojirasauras (Gojirasaurus quayi)</h1>
+    <h1>Gojirasauras</h1>
+    <h4><em>Gojirasaurus quayi</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Gojirasaurus_BW.jpg/220px-Gojirasaurus_BW.jpg" width="240" height="180" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p>Actually probably a real dinosaur, Gojirasaurus (from Gojira - “Godzilla” and saurus - “lizard”) might have been a large carnivorous dinosaur from the Triassic period. It was named for the large apex predator that has terrorized Japan for decades (with incidents occurring as late as just last year.) One shinkansen-sized specimen was once found in America, but Matthew Broderick’s acting was so bad that the specimen quickly fled back to Japan. Thought to have hunted prey using its atomic breath (NOT FIRE BREATH, READ THE LORE N00BS), this dinosaur might have been the most feared species to ever walk this earth, despite having a brain that was only the size of a wasabi pea.
+    <p>Actually probably a real dinosaur, Gojirasaurus (from <em>Gojira</em> - “Godzilla” and <em>saurus</em> - “lizard”) might have been a large carnivorous dinosaur from the Triassic period. It was named for the large apex predator that has terrorized Japan for decades (with incidents occurring as late as just last year.) One shinkansen-sized specimen was once found in America, but Matthew Broderick’s acting was so bad that the specimen quickly fled back to Japan. Thought to have hunted prey using its atomic breath (NOT FIRE BREATH, READ THE LORE N00BS), this dinosaur might have been the most feared species to ever walk this earth, despite having a brain that was only the size of a wasabi pea.
 </p>
   </div>
  </template>
@@ -100,12 +109,15 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Tyrannosaurus Rex (Tyrannosaurus Rex)</h1>
+    <h1>Tyrannosaurus Rex</h1>
+    <h4><em>Tyrannosaurus Rex</em></h4>
     <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/94/Tyrannosaurus_Rex_Holotype.jpg/250px-Tyrannosaurus_Rex_Holotype.jpg" width="30%" height="30%" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p>Sic Sempter Tyranassour! The Tyrannosaurus Rex (from tyranno - “tyrant” and saurus - “sore” and rex - “king”) is a little-known dinosaur from the late Cretaceous period. No, we’re just kidding; seriously, have you not heard of T. Rex? It’s the bus-sized one with large teeth and stubby arms! Its diet included living things (according to the “predator” theory), dead things (according to the “scavenger” theory), and that one shady character that hides in the bathroom in Jurassic Park (according to the “Spielberg” theory). Known as the most anachronistic dinosaur, sightings next to Jurassic species such as Stegosaurus and Apatosaurus (see Fantasia and the The Land Before Time movies*) have led top paleontologists to speculate that T. Rex was the first (and thus far only) animal to be in possession of a time machine (it also owns a thyme machine in its kitchen, despite not being an herbivore). This mastery of time travel is especially astonishing when considering that T.Rex had a brain the size of Mr. Peanut.
-
-*All fourteen of them.
-</p>
+    <p>
+      Sic Sempter Tyranassour! The Tyrannosaurus Rex (from <em>tyranno</em> - “tyrant” and <em>saurus</em> - “sore” and <em>rex</em> - “king”) is a little-known dinosaur from the late Cretaceous period. No, we’re just kidding; seriously, have you not heard of T. Rex? It’s the bus-sized one with large teeth and stubby arms! Its diet included living things (according to the “predator” theory), dead things (according to the “scavenger” theory), and that one shady character that hides in the bathroom in Jurassic Park (according to the “Spielberg” theory). Known as the most anachronistic dinosaur, sightings next to Jurassic species such as Stegosaurus and Apatosaurus (see <em>Fantasia</em> and the <em>The Land Before Time</em> movies*) have led top paleontologists to speculate that T. Rex was the first (and thus far only) animal to be in possession of a time machine (it also owns a thyme machine in its kitchen, despite not being an herbivore). This mastery of time travel is especially astonishing when considering that T.Rex had a brain the size of Mr. Peanut.
+    </p>
+    <p>
+      *All fourteen of them.
+    </p>
   </div>
  </template>
 
@@ -114,7 +126,8 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Yoshi (T. Yoshisaur Munchakoopas)</h1>
+    <h1>Yoshi</h1>
+    <h4><em>T. Yoshisaur Munchakoopas</em></h4>
     <img src="http://www.smashbros.com/images/character/yoshi/main.png" width="70%" height="70%" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
     <p> Yoshi (abbreviation of T. Yoshisaur Munchakoopas, meaning “T. a Happy Exclamation the Dinosaur that Eat the Koopa Troopa is the yes”) is one of the only known non-extinct (but endangered) species of dinosaurs. Famous features include its long tongue (the length of a bus), flutter-jumping abilities, and curious physiological reactions to various kinds of fruit. Capable of bearing weights of up to one fat Italian plumber, Yoshis often develop trust issues; this distrust stems from an old practice of using Yoshis as sacrificial jump fodder to get to platforms otherwise unreachable*. Yoshis come in a rainbow of colors and are distinct for the fact the entire species is male, yet every Yoshi is capable of laying (and throwing) eggs. It is the only dinosaur that can’t be shield-poked.
 
@@ -129,7 +142,8 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Thesaurus (Synonymus Lexicon)</h1>
+    <h1>Thesaurus</h1>
+    <h4><em>Synonymus Lexicon</em></h4>
     <img src="https://sp.yimg.com/ib/th?id=JN.CnUgLCE%2bvvmyLNpr3PD7fA&pid=15.1&P=0" width="70%" height="70%" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
     <p> Thesaurus (meaning “the saurus”) is a species of dinosaur that went extinct long ago, but can now be found in various forms online. One of the only species to have a love of learning and vocabulary-building, Thesaurus sported a lexicon large enough to fill a bus and a brain the size of an academia nut. Synonyms: Glossary, Onomasticon, Reference Book. Antonyms: Asaurus. </p>
   </div>
@@ -140,13 +154,14 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1> Philosoraptor (Socratesaurus Memeus)
- </h1>
+    <h1> Philosoraptor</h1>
+    <h4><em>Socratesaurus Memeus</em></h4>
     <img src="https://sp.yimg.com/ib/th?id=JN.hesa7yU9kvUZuaS9xfHQrQ&pid=15.1&P=0" width="70%" height="70%" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
-    <p>Philosoraptor (scientific name Socratesaurus Memeus, from socrates - “old Greek philosopher” and saurus - “lizard” and memeus - “time-wasting and not funny* ”), may or may not have been a dinosaur from the existentialist period, depending on your view of reality. Philosoraptor asked such poignant questions as “Why do we bake cookies and cook bacon?”, “If I’m the size of a bus, how large is my brain?” and “If Eve doomed the human race for an apple, what would she do for a Klondike Bar?” Various marx found on fossils have led some paleontologists to postulate that this species made sculptures out of plato, be we kant be sure given the current evidence.
-
-*OK, the Klondike Bar one was pretty darn funny
-</p>
+    <p>Philosoraptor (scientific name Socratesaurus Memeus, from <em>socrates</em> - “old Greek philosopher” and <em>saurus</em> - “lizard” and <em>memeus</em> - “time-wasting and not funny* ”), may or may not have been a dinosaur from the existentialist period, depending on your view of reality. Philosoraptor asked such poignant questions as “Why do we bake cookies and cook bacon?”, “If I’m the size of a bus, how large is my brain?” and “If Eve doomed the human race for an apple, what would she do for a Klondike Bar?” Various marx found on fossils have led some paleontologists to postulate that this species made sculptures out of plato, be we kant be sure given the current evidence.
+    </p>
+    <p>
+      *OK, the Klondike Bar one was pretty darn funny
+    </p>
   </div>
  </template>
 
@@ -155,7 +170,8 @@
     <button id="back" class="back-button">back</button>
   </div>
   <div class="page-wrap">
-    <h1>Barney (Doofus Purpleus)</h1>
+    <h1>Barney</h1>
+    <h4><em>Doofus Purpureus</em></h4>
     <img src="https://sp.yimg.com/ib/th?id=JN.Ms9Y1IOW%2fJZ5JrNpxOGE2w&pid=15.1&P=0" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen/>
     <p>Previously thought to be of the species Tyrannosaurus Rex, recent evidence has actually shown that Barney (scientific name Doofus Purpleus, from doofus - “doofus” and purpleus - “purple”) constituted its own separate genus*. It is widely accepted that Barney was the first species of dinosaur to promote the values of love, peace, and education amongst children, and is generally considered to be the dinosaur most apt to be cleaning up during clean-up time. Despite being only 7 feet tall, the morbidly obese Barney weighed as much as a bus, in large part due to its diet, which consisted mainly of the high-cholesterol Cheesasaurus Rex (Kraftus Americanus). Brain size: N/A.
 
